<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Menu Item Names -->
    <string name="editor_menu_item_save">"Save"</string>
    <string name="editor_menu_item_rename">"Rename"</string>
    <string name="editor_menu_item_edit">"Edit"</string>
    <string name="editor_menu_item_delete">"Delete"</string>
    <string name="editor_menu_item_mirror">"OK"</string>
    <string name="coach_mode_menu_item_auto_record">"Auto-record video"</string>
    <!-- Smile Mirror -->
    <string name="sm_app_name">"Smile Mirror"</string>
    <string name="smile_level_one_text">"Are you smiling?"</string>
    <string name="smile_level_two_text">"Getting better!"</string>
    <string name="smile_level_three_text">"Nice!"</string>
    <string name="smile_level_four_text">"Perfect!"</string>
    <string name="sm_speech_content_create_script">"Tap on the script list button and create a new script."</string>
    <string name="sm_speech_content_select_script">"Tap on the script list button and select a script."</string>
    <string name="smile_mode">"Smile mode"</string>
    <string name="coach_mode">"Conversation mode"</string>
    <string name="teleprompter_button_text_start">"Start"</string>
    <string name="teleprompter_button_text_stop">"Stop"</string>
    <!-- chart page -->
    <string name="chart_page_smile_statistics">"Smile statistics"</string>
    <string name="chart_page_smile_duration">"Duration: "</string>
    <!-- Editor -->
    <string name="editor_save_new_file_title">"Save script"</string>
    <string name="editor_save_file_title">"Save"</string>
    <string name="editor_modify_file_title">"Script modified"</string>
    <string name="editor_save_file_description">"Do you want to save your changes?"</string>
    <string name="editor_check_yes">"Yes"</string>
    <string name="editor_check_cancel">"Cancel"</string>
    <string name="editor_check_discard">"Discard"</string>
    <string name="editor_save_file_hint">"Please input the script title"</string>
    <string name="editor_edit_script">"Edit script"</string>
    <string name="editor_delete_script">"Delete script"</string>
    <string name="delete_script_description">"Delete selected script(s)?"</string>
    <string name="delete_script_toast">"%1$s script(s) have been deleted"</string>
    <string name="editor_title_bar_text">"Script list"</string>
    <string name="editor_script_title">"Preview"</string>
    <string name="font_size">"Font size"</string>
    <string name="font_size_large">"Large"</string>
    <string name="font_size_default">"Default"</string>
    <string name="font_size_small">"Small"</string>
    <string name="editor_select_item">"%1$s selected"</string>
    <string name="editor_default_date">"Preloaded script"</string>
    <string name="editor_content_hint">"Input text"</string>
    <string name="editor_title_hint">"New script"</string>
    <string name="editor_menu_title_rename">"Rename"</string>
    <string name="sm_editor_add_script_remind">"Tap \"+\" to create a new script."</string>
    <!-- Example Speeches -->
    <string name="editor_example_one_title">"Self-intro (15 seconds)"</string>
    <string name="editor_example_one_content">"Good morning. My name is (name). I have been doing research in Professor Smith's lab over the past three years. I am very excited to explore my career options here and see how my expertise can contribute to the team."</string>
    <string name="editor_example_two_title">"Bumping into someone"</string>
    <string name="editor_example_two_content">"Hi (name)! I haven't seen you in ages! What have you been up to lately?\nSorry, but I have to get going. It was great chatting with you. Let's get together again sometime!"</string>
    <string name="editor_example_three_title">"Self-intro (1 minute)"</string>
    <string name="editor_example_three_content">"Hello, I am (name). I believe I have three strong points:\nFirst, I am a team player. I am good at boosting morale and I can lead the team to achieve their goals. I once served as captain of the badminton team in university, and our team was the runner-up of the college cup. It was the school team's best result ever.\nSecond, I am very results-oriented. No matter the field, I can always overcome difficulties in the shortest possible time and achieve goals with a top-notch performance. When I was a project manager at my former company, I was able to meet performance targets for 24 consecutive months.\nFinally, I have an entrepreneurial spirit. I am often given the task of handling new businesses. Last season, I introduced \"coffee education and training activities\" in my former company. It was very successful, and all classes were fully booked until the end of the year.\nBased on these characteristics, I believe I can make a great contribution to the company. Thank you."</string>
    <string name="editor_example_four_title">"Hotel front desk"</string>
    <string name="editor_example_four_content">"Good morning, sir. How may I help you?\nDo you have a reservation?\nMay I have your ID or passport please?\nWould you like a single room or a double room?\nHow many days are you staying?\nPlease let us know if you need anything else, and have a wonderful stay!"</string>
    <!-- tutorial page  -->
    <string name="sm_tutorial_main_page_title">"Try your best smile!"</string>
    <string name="sm_tutorial_main_page_content">"Swipe to switch mode"</string>
    <string name="sm_tutorial_coach__page_text_script_list">"Script list"</string>
    <string name="sm_tutorial_coach_page_text_start_practice">"Start practicing"</string>
    <string name="sm_tutorial_coach_page_text_title">"Practice your smile during a conversation"</string>
    <string name="sm_tutorial_coach_page_text_review_video">"Review videos"</string>
    <!-- alert dialog  -->
    <string name="sm_alert_dialog_auto_recording_title">"Turn off auto-record video?"</string>
    <string name="sm_alert_dialog_auto_recording_message">"Once turned off, the system will not record videos in conversation mode."</string>
    <string name="sm_alert_dialog_camera_error_title">"Camera failed"</string>
    <string name="sm_alert_dialog_camera_error_content">"An error occurred in your camera so Smile Mirror cannot run properly."</string>
    <string name="sm_alert_dialog_ok">"OK"</string>
    <!-- toast -->
    <string name="sm_recording_folder_miss_toast">"No conversation videos in Gallery"</string>
    <string name="sm_gallery_disabled_toast">"Gallery is disabled"</string>
    <string name="sm_need_network_toast">"Please connect to a network"</string>
    <!--Permission -->
    <string name="sm_permission_title">"Permission request"</string>
    <string name="sm_permission_content">"<b><font color="#ffffff">Smile Mirror</font></b> requires <b><font color="#ffffff">Camera</font></b>, <b><font color="#ffffff">Microphone</font></b>, and <b><font color="#ffffff">Storage</font></b> permissions to show your mirrored image on the screen, and to optionally record video in conversation mode for you to review later."</string>
    <string name="sm_permission_button_text">"Turn on"</string>
    <!--Storage full -->
    <string name="storage_full">"Storage full"</string>
    <string name="storage_full_for_script">"Not enough storage space to save the script."</string>
    <!--Download page-->
    <string name="sm_download_page_title_text">"A plug-in for Google Play services is needed for the Smile Mirror to work. Please connect to a network and try again."</string>
    <string name="sm_progressbar_text">"Updating..."</string>
    <string name="sm_download_page_button_text">"Retry"</string>
</resources>
