<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingEnd="@dimen/permission_page_start_end_padding"
              android:paddingStart="@dimen/permission_page_start_end_padding">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/permission_page_title_top_margin"/>

    <TextView
        android:id="@+id/permission_agreement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/permission_button_tint_color"
        android:textSize="@dimen/permission_agreement_title_text_size"
        tools:text="@string/sm_permission_title"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/permission_page_content_top_margin"/>

    <TextView
        android:id="@+id/permission_agreement_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="9"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColor="@color/permission_page_content_text_color"
        android:textSize="@dimen/permission_agreement_content_text_size"
        tools:text="@string/sm_permission_content"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/permission_page_image_top_margin"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerInside"
        android:src="@drawable/permission"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/permission_page_button_top_margin"/>

    <Button
        android:id="@+id/permission_button"
        style="@style/PermissionButtonStyle"
        android:gravity="center"
        tools:text="@string/sm_permission_button_text"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/permission_page_button_bottom_margin"/>

</LinearLayout>